Fix alignment of ol tag in footnotes

--- a/_sass/elements/_footnote.scss
+++ b/_sass/elements/_footnote.scss
@@ -1,4 +1,4 @@
-
-.footnotes li p {
-  display: inline;
+.footnotes ol {
+  list-style-position: unset;
+  margin-left: $ol-footnote-spacing-unit;
 }
