--- a/_sass/settings/_spaces.scss
+++ b/_sass/settings/_spaces.scss
@@ -3,3 +3,4 @@
 // *----------------------------------*/
 
 $base-spacing-unit: 16px;
+$ol-footnote-spacing-unit: $base-spacing-unit + 4
